--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
   },
   "devDependencies": {
     "@types/node": "18.0.0",
+    "@types/nodemailer": "^6.4.4",
+    "@types/nodemailer-express-handlebars": "^4.0.2",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "nodemailer": "^6.7.5",
+    "nodemailer-express-handlebars": "^5.0.0",
     "typescript": "4.7.4"
   }
 }
